packages/itwinui-css/src/tabs/tabs.scss
// Copyright (c) Bentley Systems, Incorporated. All rights reserved.
// See LICENSE.md in the project root for license terms and full copyright notice.
@import '../utils/index';

@mixin iui-tabs-wrapper {
  --_iui-actions-gap: var(--iui-size-s);

  display: grid;
  position: relative;
}

@mixin iui-tabs {
  @include iui-reset;
  position: relative;
  list-style: none;
  user-select: none;

  .iui-tab {
    @include iui-reset;
    font-family: inherit;
    position: relative;
    display: flex;
    align-items: center;
    font-size: var(--iui-font-size-1);
    min-height: calc(var(--iui-size-m) * 2.5);
    height: 100%;
    cursor: pointer;
    color: var(--iui-color-text);
    transition: background-color var(--iui-duration-1) ease-out;

    &.iui-active {
      color: var(--iui-color-text-accent);

      .iui-tab-icon {
        fill: currentColor;
      }

      .iui-tab-description {
        color: inherit;
      }
    }

    &[disabled] {
      cursor: not-allowed;
      color: var(--iui-color-text-disabled);

      .iui-tab-description {
        color: inherit;
      }

      .iui-tab-icon {
        fill: var(--iui-color-icon-disabled);
      }
    }

    @include iui-focus;
  }

  .iui-tab-icon {
    @include iui-icon-style('m');
    fill: var(--iui-color-icon);
    transition: fill var(--iui-duration-1) ease-out;

    + .iui-tab-label {
      margin-left: var(--iui-size-xs);
    }
  }

  .iui-tab-description {
    display: none;
    font-size: var(--iui-font-size-0);
    color: var(--iui-color-text-muted);
  }

  &.iui-green .iui-tab {
    &:focus {
      outline-color: var(--iui-color-text-positive);
    }

    &.iui-active {
      color: var(--iui-color-text-positive);

      .iui-tab-icon {
        fill: currentColor;
      }
    }
  }

  ~ .iui-tabs-content {
    padding-top: var(--iui-size-s);
    padding-bottom: var(--iui-size-s);
  }
}

@mixin iui-tab-label {
  text-align: left;
  max-width: 60ch;

  > * {
    @include iui-line-clamp(3);
  }
}

@mixin iui-tabs-horizontal {
  grid-template-areas: 'tabs tabs-actions' 'tabs-content tabs-content';
  grid-template-columns: 1fr min-content;

  .iui-tabs {
    display: flex;
  }

  .iui-tab {
    &::after {
      width: 100%;
      height: 0;
    }

    &.iui-active::after {
      height: var(--iui-size-3xs);
    }
  }

  .iui-tabs-actions {
    column-gap: var(--iui-size-xs);
    margin-left: var(--_iui-actions-gap);
  }
}

@mixin iui-tabs-vertical {
  grid-template-areas: 'tabs tabs-content' 'tabs-actions tabs-content';
  grid-template-columns: min-content 1fr;

  .iui-tabs {
    li,
    .iui-tab {
      width: 100%;
      white-space: nowrap;
    }

    ~ .iui-tabs-content {
      flex-grow: 1;
    }
  }

  .iui-tab {
    &::after {
      width: 0;
      height: 100%;
    }

    &.iui-active::after {
      width: var(--iui-size-3xs);
    }
  }

  .iui-tabs-actions {
    flex-direction: column;
    row-gap: var(--iui-size-xs);
    margin-top: var(--_iui-actions-gap);
  }
}

@mixin iui-tab-not-animated {
  .iui-tab::after {
    content: '';
    position: absolute;
    background-color: var(--iui-color-border-accent);
  }

  .iui-active::after {
    @media (prefers-reduced-motion: no-preference) {
      transition: width var(--iui-duration-1) ease,
        height var(--iui-duration-1) ease;
    }
  }

  &.iui-green .iui-tab::after {
    background-color: var(--iui-color-border-positive);
  }
}

@mixin iui-tab-animated {
  &::after {
    position: absolute;
    content: ' ';
    background-color: var(--iui-color-border-accent);
  }

  &.iui-green::after {
    background-color: var(--iui-color-border-positive);
  }

  @at-root {
    .iui-horizontal &::after {
      top: calc(100% - #{var(--iui-size-3xs)});
      height: var(--iui-size-3xs);
      left: var(--stripe-left);
      width: var(--stripe-width);
      @media (prefers-reduced-motion: no-preference) {
        transition: width var(--iui-duration-1) ease-out,
          left var(--iui-duration-1) ease-out;
      }
    }
  }

  @at-root {
    .iui-vertical &::after {
      left: calc(100% - #{var(--iui-size-3xs)});
      width: var(--iui-size-3xs);
      top: var(--stripe-top);
      height: var(--stripe-height);
      @media (prefers-reduced-motion: no-preference) {
        transition: top var(--iui-duration-1) ease-out;
      }
    }
  }
}

@mixin iui-tabs-actions {
  grid-area: tabs-actions;
  display: flex;
  justify-content: flex-end;
  align-items: center;
}

@mixin iui-tabs-content {
  grid-area: tabs-content;
}

